fix: restore file

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
-    "deploy": "npm run build && firebase deploy"
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\""
   },
   "browserslist": {
     "production": [
